fixed spacing for internal header (mobile)

--- a/styles.css
+++ b/styles.css
@@ -1965,7 +1965,7 @@ footer {
 
     .description-paragraph {
         width: 90%;
-        margin-top: 24px;
+        margin-top: 36px;
         margin-bottom: 0px;
         font-size: 18px;
     }
